--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "open-in-app",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^130.0.0",
     "nodemon": "^3.0.2"
